server(controller): add the update information and the password
